[package]
name = "gecko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.2"
crc = "1.7"
serde = "1.0.149"
serde_derive = "1.0.149"

[lib]
name = "geckolib"
path = "src/lib.rs"

[[bin]]
name = "gecko_mem"
path = "src/gecko_mem.rs"
